--- a/index.html
+++ b/index.html
@@ -120,7 +120,7 @@
                 <div class="links"> 
                     <a href="Paginas/about.html" style="color: white; margin: 0 10px;">Sobre Nosotros</a> 
                     <a href="mailto:info@dualplayhub.com" style="color: white; margin: 0 10px;">Contacto</a> 
-                    <a href="Paginas/privacity.html" style="color: white; margin: 0 10px;">Política de Privacidad</a> 
+                    <a href="Paginas/privacy.html" style="color: white; margin: 0 10px;">Política de Privacidad</a> 
                     <a href="Paginas/terms.html" style="color: white; margin: 0 10px;">Términos de Servicio</a> 
                     <a href="Paginas/empleo.html" style="color: white; margin: 0 10px;">Empleo</a>
                     <a href="mailto:suggestions@dualplayhub.com" style="color: white; margin: 0 10px;">Sugerencias</a>
