--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
             function isMobile() 
             { return /iPhone|iPad|iPod|Android/i.test(navigator.userAgent); } 
             if (isMobile()) { 
-                window.location.href = "error.html"; } 
+                window.location.href = "Paginas/error.html"; } 
             });
         document.addEventListener('DOMContentLoaded', function() {
             const cards = document.querySelectorAll('.card');
