--- a/Paginas/contac.html
+++ b/Paginas/contac.html
@@ -28,6 +28,7 @@
         }
         main {
             padding: 20px;
+            width: 25%;
         }
         footer {
             background-color: #333;
