--- a/Paginas/contac.html
+++ b/Paginas/contac.html
@@ -10,12 +10,19 @@
             padding: 0;
             background-color: #f4f4f4;
             color: #333;
+            display:flex;
+            flex-direction: column;
+            align-content: center;
+            justify-content: center;
+            align-items: center;
+            overflow-y:scroll;
         }
         header {
             background-color: #333;
             color: white;
             padding: 20px 0;
             text-align: center;
+            width:100%;
         }
         nav a {
             margin: 0 15px;
@@ -29,6 +36,7 @@
         main {
             padding: 20px;
             width: 25%;
+            text-aling:center;
         }
         footer {
             background-color: #333;
