--- a/Paginas/terms.html
+++ b/Paginas/terms.html
@@ -61,7 +61,7 @@
         <nav>
             <a href="../index.html">Inicio</a>
             <a href="about.html">Sobre Nosotros</a>
-            <a href="contact.html">Contacto</a>
+            <a href="contac.html">Contacto</a>
             <a href="privacy.html">Política de Privacidad</a>
             <a href="terms.html">Términos de Servicio</a>
         </nav>
